* Changed some of the skin values to be set to an empty string by default, meaning it should use the theme's default skin, rather than always the theme's root skin. It's too hot in here to overthink it. (install.sql, Themes.php) * Micro-optimization and translation tweak. (Admin.php, Themes.french.php) ! When picking a default theme for guests with the theme picker, the pick page was set as being from the profile area, rather than admin area. (Subs.php) ! Background issues on Warm menu in sucky browsers, including Safari Mobile. (Warm/index.css) * Tweaked font size in main menu to help usability on iOS. (index.iphone.css)

--- a/Themes/default/skins/Warm/index.css
+++ b/Themes/default/skins/Warm/index.css
@@ -100,6 +100,7 @@ dl#feed
 ------------------------------------------------------- */
 #navi
 	border-bottom: 1px dotted #000
+	background: $main_bg
 	background: $menu_bg
 
 #main_menu
